base/999-ms-demo/fuse-999-demo-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: core-ui
  name: core-ui
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: core-ui
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: core-ui
    spec: 
      containers: 
        - 
          image: "docker.prospecta.com/prospecta/core-ui:development"
          name: core-ui
          resources: {}
